--- a/src/sass/blocks/_banner.scss
+++ b/src/sass/blocks/_banner.scss
@@ -2,35 +2,89 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    height: 84px;
+    height: 100px;
     width: 100%;
+    z-index: 2;
+    overflow: hidden;
+    &__background0{
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100px;
+        background: url('../img/Pattern_0.svg') center center/cover no-repeat;
+        opacity: 0.2;
+        z-index: 1;
+        overflow: hidden;
+    }
+    &__background{
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100px;
+        background: center/cover no-repeat;
+        animation: backgroundChanging 5s 2 1s;
+        z-index: 2;
+        overflow: hidden;
+    }
     .banner-black{
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        background-color: #000;
+        background-color: #202020;
         height: 100%;
         width: 50%;
+        z-index: -1;
         &__text{
             display: none;
+            font-size: 15px;
         }
         &__list{
-            display: none;
+            width: 200px;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
             .li{
+                min-width: 15px;
+                display: flex;
+                font-size: 15px;
                 opacity: 0;
                 transform: translateY(100%);
                 transition: 1s all;
+                text-align: left;
                 &_active{
                     opacity: 1;
                     transform: translateY(0);
                     transition: 1s all;
                 }
+                &:nth-child(2){
+                    text-align: center;
+                    margin: 0 auto;
+                }
+                &:nth-child(3){
+                    text-align: right;
+                    margin-left: auto;
+                }
+                &::before{
+                    content: ' ';
+                    display: block;
+                    width: 5px;
+                    height: 5px;
+                    background-color: #A58161;
+                    position: absolute;
+                    left: -10px;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    border-radius: 100%;
+                }
             }
         }
         &__logo{
-            height: 50px;
-            width: 50px;
-            background-color: #fff;
+            justify-content: center;
+            align-items: center;
+            width: 133px;
             margin: 0 20px;
             opacity: 0;
             transform: translateX(-100%);
@@ -40,36 +94,67 @@
                 transform: translateX(0);
                 transition: 1s all;
             }
+            img {
+                width: 100%;
+            }
         }
     }
     .banner-green {
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        background-color: teal;
+        background-color: #034A36;
         height: 100%;
         width: 50%;
+        z-index: -1;
         &__text{
             display: none;
+            font-size: 15px;
             
         }
         &__list{
-            display: none;
+            display: flex;
+            width: 200px;
+            flex-direction: column;
+            justify-content: flex-start;
             .li{
+                display: flex;
+                font-size: 15px;
                 opacity: 0;
                 transform: translateY(100%);
                 transition: 1s all;
+                text-align: left;
                 &_active{
                     opacity: 1;
                     transform: translateY(0);
                     transition: 1s all;
                 }
+                &:nth-child(2){
+                    text-align: center;
+                    margin: 0 auto;
+                }
+                &:nth-child(3){
+                    text-align: right;
+                    margin-left: auto;
+                }
+                &::before{
+                    content: ' ';
+                    display: block;
+                    width: 5px;
+                    height: 5px;
+                    background-color: #61A96B;
+                    position: absolute;
+                    left: -10px;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    border-radius: 100%;
+                }
             }
         }
         &__logo{
-            height: 50px;
-            width: 50px;
-            background-color: #fff;
+            justify-content: center;
+            align-items: center;
+            width: 133px;
             margin: 0 20px;
             opacity: 0;
             transform: translateX(100%);
@@ -78,6 +163,111 @@
                 opacity: 1;
                 transform: translateX(0);
                 transition: 1s all;
+            }
+            img {
+                width: 100%;
+            }
+        }
+    }
+}
+@media(max-width: 1440px){
+    .banner{
+        height: 80px;
+        &__background{
+            height: 80px;
+        }
+        &__background0{
+            height: 80px;
+        }
+        .banner-black__logo, .banner-green__logo{
+            width: 100px;
+        }
+        .banner-black__text, .banner-green__text{
+            font-size: 12px;;
+        }
+        .banner-black__list, .banner-green__list{
+            width: 150px;
+            .li{  
+                font-size: 12px;
+            }
+        }
+    }
+}
+@media(max-width: 1024px){
+    .banner{
+        height: 65px;
+        &__background{
+            height: 65px;
+        }
+        &__background0{
+            height: 65px;
+        }
+    }
+}
+@media(max-width: 768px){
+    .banner{
+        height: 50px;
+        &__background{
+            height: 50px;
+        }
+        &__background0{
+            height: 50px;
+        }
+        .banner-green{
+            padding-left: 10px;
+        }
+        .banner-black{
+            padding-right: 10px;
+        }
+        .banner-black__logo, .banner-green__logo{
+            width: 100px;
+            margin: 0 10px;
+        }
+        .banner-black__text, .banner-green__text{
+            font-size: 11px;;
+        }
+        .banner-green__list{
+            margin-left: 10px;
+        }
+        .banner-black__list, .banner-green__list{
+            display: none;
+            .li{  
+                font-size: 11px;
+            }
+        }
+    }
+}
+@media(max-width: 410px){
+    .banner{
+        height: 40px;
+        &__background{
+            height: 40px;
+            animation: none;
+        }
+        &__background0{
+            height: 40px;
+            background-image: none;
+        }
+        .banner-green{
+            padding-left: 10px;
+        }
+        .banner-black{
+            padding-right: 10px;
+        }
+        .banner-black__logo, .banner-green__logo{
+            margin: 0 5px;
+        }
+        .banner-black__text, .banner-green__text{
+            font-size: 10px;;
+        }
+        .banner-green__list{
+            margin-left: 5px;
+        }
+        .banner-black__list, .banner-green__list{
+            width: 100px;
+            .li{  
+                font-size: 10px;
+                line-height: 12px;
             }
         }
     }
